src/test/deca/syntax/invalid/renduInter01/09not_unary_operator.deca
// Description:
//      Programme lexicalement incorrect
//      => l'opérateur ">" est un opérateur binaire
//
// Resultats:
//      Erreur syntaxique
//      Ligne 12 : token '>' inattendu

{
    int x = 1;
    int y = 2;
    if ( > x) {
        println("ok");
    } else {
        print("erreur");
    }
}
